showing items in various grouped views

--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -2,3 +2,8 @@
 <h1>Collection</h1>
 
 <%= @collection.name %>
+<ul>
+  <% @collection.items.each do |item| %>
+    <li><%= item.artist %></li>
+  <% end %>
+</ul>
