--- a/app/views/gardens/edit.html.erb
+++ b/app/views/gardens/edit.html.erb
@@ -7,9 +7,15 @@
   </div>
 
   Existing:
-  <% @garden.items.each do |item| %>
-    <li><%= item.artist %> - <%= item.title %></li>
+  <%= form.fields_for :garden_items, @garden.garden_items.reject(&:new_record?) do |garden_item_form| %>
+      <div>
+        <%= garden_item_form.object.item.title %> - <%= garden_item_form.object.item.artist %>
+        <%= garden_item_form.check_box :_destroy %>
+        <%= garden_item_form.label :_destroy, 'Remove' %>
+      </div>
+      <%= garden_item_form.hidden_field :item_id %>
   <% end %>
+
 
   Add:
   <div>
