add number to subitem

--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -6,5 +6,10 @@ The Garden: <%= @garden.name %>
 <ul>
   <% @garden.items.each do |item| %>
     <li><%= item.artist %> - <%= item.title %></li>
+    <% item.subitems.each do |subitem| %>
+      <ul>
+        <li><%= subitem.number %> - <%= subitem.title %></li>
+      </ul>
+    <% end %>
   <% end %>
 </ul>
