import task working, need to add folders to vinyl, but I think that is another problem

--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -7,7 +7,7 @@
     <li><%= item.artist %> - <%= item.title %></li>
     <% item.subitems.each do |subitem| %>
       <ul>
-        <li><%= subitem.number %> - <%= subitem.title %></li>
+        <li><%= subitem.position %> - <%= subitem.title %></li>
       </ul>
     <% end %>
   <% end %>
