--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -8,7 +8,7 @@ The Garden: <%= @garden.name %>
     <li><%= item.artist %> - <%= item.title %></li>
     <% item.subitems.each do |subitem| %>
       <ul>
-        <li><%= subitem.number %> - <%= subitem.title %></li>
+        <li><%= subitem.position %> - <%= subitem.title %></li>
       </ul>
     <% end %>
   <% end %>
