--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -5,11 +5,6 @@ The Garden: <%= @garden.name %>
 
 <ul>
   <% @garden.items.each do |item| %>
-    <li><%= item.artist %> - <%= item.title %></li>
-    <% item.subitems.each do |subitem| %>
-      <ul>
-        <li><%= subitem.position %> - <%= subitem.title %></li>
-      </ul>
-    <% end %>
+    <%= render item %>
   <% end %>
 </ul>
