--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -3,7 +3,7 @@
 
 <%= @collection.name %>
 <ul>
-  <% @collection.items.each do |item| %>
-    <%= render item %>
+  <% @collection.releases.each do |release| %>
+    <%= render release %>
   <% end %>
 </ul>
