--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -4,7 +4,7 @@
 The Garden: <%= @garden.name %>
 
 <ul>
-  <% @garden.items.each do |item| %>
-    <%= render item %>
+  <% @garden.releases.each do |item| %>
+    <%= render releases %>
   <% end %>
 </ul>
