--- a/app/views/gardens/edit.html.erb
+++ b/app/views/gardens/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Update <%= @garden.name %> </h1>
 
 <%= form_with(url: "edit", method: :get) do |form| %>
-  <%= form.label :item_search, "Search Items For:" %>
+  <%= form.label :release_search, "Search Releases For:" %>
   <%= form.text_field :item_search %>
   <%= form.submit "Search" %>
 <% end %>
@@ -21,16 +21,16 @@
         <%= garden_item_form.check_box :_destroy %>
         <%= garden_item_form.label :_destroy, 'Remove' %>
       </div>
-      <%= garden_item_form.hidden_field :item_id %>
+      <%= garden_item_form.hidden_field :release_id %>
   <% end %>
 
   <h3>Add Items:</h3>
   <div>
-    <% (0..@number_of_addable_items).each do |offset| %>
+    <% (0..@number_of_addable_releases).each do |offset| %>
       <%= form.fields_for :garden_items, GardenItem.new, child_index: Time.now.to_i + offset do |garden_item_form| %>
         <div>
-          <%= garden_item_form.label :item_id %>
-          <%= garden_item_form.collection_select :item_id, @searched_items, :id, :title, prompt: 'Select an item' %>
+          <%= garden_item_form.label :release_id %>
+          <%= garden_item_form.collection_select :release_id, @searched_releases, :id, :title, prompt: 'Select an item' %>
         </div>
       <% end %>
     <% end %>
