--- a/app/views/annotations/index.html.erb
+++ b/app/views/annotations/index.html.erb
@@ -2,6 +2,9 @@
 
 <div class="centre">
   <h1 ><%= @release.artist %> - <%= @release.title %> [<%= @release.label %>]</h1>
+  <div>
+    <p><%= @release.release_year %> // <%= @release.purchase_date %></p>
+  </div>
   <img src="https://tide-pool.ca/tessellates/<%= @collection_name %>/images/<%= @release.external_id %>.jpg">
   <ul class="track-list">
     <% @release.tracks.each do |t| %>
